data/derived/comb/progs/unify/prog4723.ml.out
Characters 18-25:
  let _ = fixpoint (collatz, 9001) ;;
                    ^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int -> int -> int * bool
       Type int is not compatible with type int -> int * bool 
